<resources>
    <string name="app_name">HizliGeliyoTest</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="demo_hizligeliyo_com">demo@hizligeliyo.com</string>
    <string name="psw">* * * * * *</string>
    <string name="sifremi_unuttum">Şifremi unuttum</string>
    <string name="giris_yap">Giriş yap</string>
    <string name="hesabin_yok_mu">Hesabın yok mu?</string>
    <string name="kaydol">Kaydol</string>
</resources>